made many small changes to fix the readability

--- a/styles/sass/_about.scss
+++ b/styles/sass/_about.scss
@@ -13,6 +13,8 @@
           font-size: 1.5rem;
           margin-top: 40px;
           font-family: $baseFont;
+          letter-spacing: 1.5px;
+          line-height: 1.5;
      }
 }
 .me {
