--- a/styles/sass/_projects.scss
+++ b/styles/sass/_projects.scss
@@ -27,6 +27,8 @@
           }
           p {
                font-family: $baseFont;
+               letter-spacing: 1.5px;
+               line-height: 1.5;
           }
 }
 .project .rhom {
