--- a/styles/sass/_typography.scss
+++ b/styles/sass/_typography.scss
@@ -1,6 +1,6 @@
 $blueGreen: #5bf0b2;
 $bubble: #e7feff;
-$blah: #353839;
+$blah: #383838;
 $logoFont: 'Play', sans-serif;
 $baseFont: 'El Messiri', sans-serif;
 
